Fix spacing on small screens

--- a/css/lightning-worlds.css
+++ b/css/lightning-worlds.css
@@ -90,6 +90,10 @@ h2 {
 	padding-top: 30px;
 }
 
+.nor-btn{
+	margin-top: 10px;
+}
+
 /*Temp until there is more content*/
 #fields {
 	padding-bottom: 13em;
